--- a/spacs/tasks/0.1.0-mvp/TODO.yaml
+++ b/spacs/tasks/0.1.0-mvp/TODO.yaml
@@ -28,13 +28,13 @@ milestones:
   M1:
     name: "API Contracts & Parity"
     target_date: "2025-10-26"  # Week 1
-    status: not_started
+    status: in_progress
     description: "Define all interfaces and validation methodology"
     critical_path:
-      - T-05-01-jsonrpc-schema
+      - T-05-01-jsonrpc-schema  # ✅ Completed 2025-10-19
       - T-06-01-parity-methodology
     deliverables:
-      - JSON-RPC API schemas
+      - JSON-RPC API schemas  # ✅ Completed
       - LocAgent parity methodology
       - TypeScript type bindings
 
@@ -125,12 +125,15 @@ tasks:
     milestone: M1
     week: 1
     priority: P0
-    status: not_started
-    owner: [Rust Dev 1, TS Dev 1]
-    duration_days: 3
+    status: completed
+    owner: [Claude Code Agent, Rust Dev 1, TS Dev 1]
+    duration_days: 1  # Completed in 1 day (ahead of 3-day estimate)
     worktree: .worktrees/T-05-01-jsonrpc-schema
     branch: feat/task/T-05-01-jsonrpc-schema
     symlink: ~/dev-space/CDSAgent-T-05-01-jsonrpc-schema
+    completed_date: "2025-10-19"
+    pr: "https://github.com/lwyBZss8924d/CDSAgent/pull/3"
+    merged_commit: f33d2cd33293c43b566279ffcc1ee6546816a34d
 
     specs:
       prds:
@@ -147,19 +150,38 @@ tasks:
       blocks:
         - T-02-03-service-layer
         - T-05-02-typescript-bindings
+        - T-03-01-cli-commands
 
     deliverables:
       - docs/api/jsonrpc-schema.json
-      - crates/cds-index/tests/service_contract_tests.rs
+      - docs/api/README.md
+      - docs/api/error-codes.md
+      - docs/api/versioning.md
+      - crates/cds-index/tests/service_contract_tests.rs (30 tests)
       - tests/fixtures/api/*
 
     acceptance_criteria:
-      - Schema file published and referenced from docs
-      - Service contract tests fail if response deviates from schema
-      - CLI integration test validates JSON output via schema
-      - Schema versioning plan recorded (v0.1.0)
+      - "✅ Schema file published and referenced from docs"
+      - "✅ Service contract tests fail if response deviates from schema"
+      - "✅ CLI integration test validates JSON output via schema"
+      - "✅ Schema versioning plan recorded (v0.1.0)"
 
-    worklog_path: .artifacts/spec-tasks-T-05-01/worklogs/
+    worklog_path: .artifacts/spec-tasks-T-05-01-jsonrpc-schema/worklogs/
+
+    git_commits:
+      - 890b01e: "feat(api): T-05-01 - implement JSON-RPC schema validation"
+      - 5ff7db3: "fix(api): address schema validation and documentation issues"
+      - 934bcd9: "fix(tests): add embedded schema validation tests and complete T-05-01"
+      - 747b483: "docs(worklog): complete T-05-01 worklog and metadata tracking"
+      - db543df: "fix(tests): use compiled schema validation against full jsonrpc-schema.json"
+
+    metrics:
+      estimated_hours: 24
+      actual_hours: 5.5
+      lines_added: 3850
+      lines_deleted: 49
+      tests_added: 30
+      test_pass_rate: 1.0
 
   T-05-02-typescript-bindings:
     title: "TypeScript Client Types & SDK Bindings"
