--- a/.artifacts/spec-tasks-T-06-01-parity-methodology/metadata.yaml
+++ b/.artifacts/spec-tasks-T-06-01-parity-methodology/metadata.yaml
@@ -1,41 +1,42 @@
-# Task Metadata Template
+# Task Metadata
 
 task:
   id: "T-06-01-parity-methodology"
   title: "LocAgent Parity Validation Methodology"
   status: "not_started"  # not_started | in_progress | blocked | completed
-  priority: "P0"  # P0 | P1 | P2
-  milestone: "{MILESTONE_ID}"
+  priority: "P0"
+  milestone: "M1"
   week: 1
-  duration_days: 3
+  duration_days: 2
 
 owner:
-  primary: "Claude Code Agent"
-  secondary: []
+  primary: "Rust Lead"
+  secondary:
+    - "Claude Code Agent"
 
 dates:
-  started: null  # YYYY-MM-DD
-  target_completion: null  # YYYY-MM-DD
-  actual_completion: null  # YYYY-MM-DD
+  started: null
+  target_completion: "2025-10-22"
+  actual_completion: null
 
 specs:
   prds:
-    - "spacs/prd/0.1.0-MVP-PRDs-v0/{PRD_FILE}.md"
+    - "spacs/prd/0.1.0-MVP-PRDs-v0/06-rust-refactoring-plan.md"
+    - "spacs/prd/0.1.0-MVP-PRDs-v0/01-system-architecture-scope.md"
   issues:
-    - "spacs/issues/04-0.1.0-mvp/{ISSUE_FILE}.md"
+    - "spacs/issues/04-0.1.0-mvp/06-refactor-parity.md"
   tasks:
-    - "spacs/tasks/0.1.0-mvp/T-06-01-parity-methodology/{TASK_FILE}.md"
+    - "spacs/tasks/0.1.0-mvp/06-refactor-parity/T-06-01-parity-methodology.md"
 
 git:
   worktree: ".worktrees/T-06-01-parity-methodology"
   branch: "feat/task/T-06-01-parity-methodology"
   symlink: "~/dev-space/CDSAgent-T-06-01-parity-methodology"
-  commits: []
-    # Example:
-    # - hash: "abc1234"
-    #   message: "feat(scope): description"
-    #   date: "2025-10-19"
-    #   files_changed: 5
+  commits:
+    - hash: "a77bea48be891d229faa7878c04befb320972186"
+      message: "feat(validation): T-06-01 - Establish LocAgent parity validation methodology"
+      date: "2025-10-20"
+      files_changed: 10
   pr:
     number: null
     url: null
@@ -44,47 +45,70 @@ git:
 
 dependencies:
   requires: []
-    # Example: ["T-05-01-jsonrpc-schema"]
-  blocks: []
-    # Example: ["T-02-03-service-layer"]
+  blocks:
+    - "T-02-01-graph-builder"
+    - "T-02-02-sparse-index"
+    - "T-08-03-parity-validation"
 
 deliverables:
-  - "path/to/file1.rs"
-  - "path/to/file2.ts"
+  - "docs/parity-validation-methodology.md"
+  - "scripts/parity-check.sh"
+  - "tests/fixtures/parity/README.md"
+  - "tests/fixtures/parity/locagent_version.txt"
+  - "tests/fixtures/parity/locagent_repo/"
+  - "tests/fixtures/parity/sample_repos/"
+  - "tests/fixtures/parity/golden_outputs/"
 
 acceptance_criteria:
-  - criterion: "Description of criterion 1"
-    status: "pending"  # pending | in_progress | completed
+  - criterion: "Publish docs/parity-validation-methodology.md with full methodology"
+    status: "pending"
     notes: ""
-  - criterion: "Description of criterion 2"
+  - criterion: "Implement scripts/parity-check.sh covering graph, search, traverse, performance checks"
+    status: "pending"
+    notes: ""
+  - criterion: "Extract and store golden outputs for 5 SWE-bench Lite repos"
+    status: "pending"
+    notes: ""
+  - criterion: "Track LocAgent baseline version in tests/fixtures/parity/locagent_version.txt"
+    status: "pending"
+    notes: ""
+  - criterion: "Define and socialize parity gates for project phases"
     status: "pending"
     notes: ""
 
 worklog:
   base_path: ".artifacts/spec-tasks-T-06-01-parity-methodology/worklogs/"
-  entries: []
-    # Example:
-    # - date: "2025-10-19"
-    #   summary: "worklogs/2025-10-19-work-summary.md"
-    #   commits: "worklogs/2025-10-19-commit-log.md"
-    #   notes: "worklogs/2025-10-19-notes.md"
+  entries:
+    - date: "2025-10-20"
+      summary: "worklogs/2025-10-20-work-summary.md"
+      commits: "worklogs/2025-10-20-commit-log.md"
+      notes: "worklogs/2025-10-20-notes.md"
+    - date: "2025-10-22"
+      summary: null
+      commits: null
+      notes: "worklogs/2025-10-22-review.md"
 
 metrics:
-  estimated_hours: 24  # 3 days * 8 hours
+  estimated_hours: 16  # 2 days * 8 hours
   actual_hours: 0
   lines_added: 0
   lines_deleted: 0
   files_modified: 0
   tests_added: 0
-  test_coverage: 0.0  # 0.0 to 1.0
+  test_coverage: 0.0
 
 comments:
   - date: "2025-10-19"
     author: "Claude Code Agent"
     text: "Initial metadata created"
+  - date: "2025-10-22"
+    author: "Codex Review Agent"
+    text: "Captured review context; task still pending kick-off and past target completion (2025-10-21)."
 
 related_artifacts:
   - type: "documentation"
-    path: "docs/api/schema.md"
+    path: "docs/parity-validation-methodology.md"
+  - type: "script"
+    path: "scripts/parity-check.sh"
   - type: "test_fixture"
-    path: "tests/fixtures/sample.json"
+    path: "tests/fixtures/parity/"
