--- a/spacs/tasks/0.1.0-mvp/TODO.yaml
+++ b/spacs/tasks/0.1.0-mvp/TODO.yaml
@@ -243,11 +243,13 @@ tasks:
     milestone: M1
     week: 1
     priority: P0
-    status: not_started
+    status: completed
     owner: Rust Lead
     duration_days: 2
-    worktree: null  # Documentation task in main repo
-    branch: main
+    completed_date: "2025-10-22"
+    merged_pr: 4
+    worktree: .worktrees/T-06-01-parity-methodology
+    branch: feat/task/T-06-01-parity-methodology
 
     specs:
       prds:
